style: Use whitespaces correctly, add a shape to the design

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,10 +36,10 @@ html::-webkit-scrollbar {
     @apply heading-base tracking-normal text-3xl md:text-6xl;
   }
   .h2 {
-    @apply heading-base tracking-wide text-3xl md:text-5xl;
+    @apply heading-base tracking-tighter text-3xl md:text-5xl;
   }
   .h3 {
-    @apply heading-base tracking-wider text-2xl md:text-4xl;
+    @apply heading-base tracking-tight text-2xl md:text-4xl;
   }
   h1 {
     @apply h1;
@@ -50,10 +50,17 @@ html::-webkit-scrollbar {
   h3 {
     @apply h3;
   }
+  p {
+    @apply tracking-[-0.01225em] leading-relaxed text-base md:text-lg;
+  }
 }
 
 @layer components {
   .button {
     @apply bg-primary text-black border border-primary rounded-lg box-border cursor-pointer uppercase text-sm leading-7 px-12 py-3 w-fit font-bold active:outline-none hover:outline-none hover:brightness-125 transition-all;
+  }
+
+  .about-value-text {
+    @apply font-display uppercase font-bold text-left text-sm;
   }
 }
